# EventProcessor

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
src/: benchmark.cpp  benchmark.h  event_proc.cpp  event_proc.h  ring_buffer.cpp  ring_buffer.h  types.h
